@@ -1,3 +1,12 @@
+2015-04-09  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* emulparams/elf_x86_64.sh (BNDPLT): Removed.
+	(PARSE_AND_LIST_OPTIONS): New.
+	(PARSE_AND_LIST_ARGS_CASE_Z): Likewise.
+	* emultempl/elf32.em (gld${EMULATION_NAME}_handle_option): Remove
+	BNDPLT check.  Handle PARSE_AND_LIST_ARGS_CASE_Z.
+	(gld${EMULATION_NAME}_list_options): Remove BNDPLT check.
+
 2015-04-09  Nick Clifton  <nickc@redhat.com>
 
 	* po/fr.po: Updated French translation.
